# nice-plug

./: Cargo.toml  FORK.md  GETTING_STARTED.md  meta.err
crates/nice-log/: Cargo.toml
crates/nice-log/examples/: basic.rs
crates/nice-log/src/: lib.rs  windbg.rs
crates/nice-plug/: Cargo.toml
crates/nice-plug-core/: Cargo.toml
crates/nice-plug-core/src/: debug.rs  editor.rs  lib.rs  plugin.rs
crates/nice-plug-core/src/context/: gui.rs  init.rs
crates/nice-plug-core/src/editor/: embedded.rs
crates/nice-plug-dioxus/: Cargo.toml  build.rs  tailwind.css
crates/nice-plug-dioxus/assets/: tailwind-flat.css  theme.css
crates/nice-plug-dioxus/examples/: standalone.rs
crates/nice-plug-dioxus/src/: assets.rs  context.rs  custom_paint.rs  editor.rs  embedded.rs  events.rs  hot_reload.rs  lib.rs  renderer.rs  standalone.rs  state.rs  wgpu_offscreen.rs  wgpu_state.rs  window.rs  window_softbuffer.rs
crates/nice-plug-dioxus/src/widgets/: dropdown.rs  mod.rs  param_slider.rs  peak_meter.rs  resize_handle.rs
crates/nice-plug-egui/: Cargo.toml
crates/nice-plug-egui/src/: editor.rs  lib.rs  resizable_window.rs
crates/nice-plug-iced/: Cargo.toml
crates/nice-plug-iced/src/: editor.rs  lib.rs
crates/nice-plug/src/: lib.rs  prelude.rs
crates/nice-plug/src/wrapper/: clap.rs  standalone.rs  util.rs  vst3.rs
crates/nice-plug/src/wrapper/clap/: context.rs  reaper_embed.rs  wrapper.rs
crates/nice-plug/src/wrapper/standalone/: config.rs  wrapper.rs
crates/nice-plug/src/wrapper/vst3/: view.rs
examples/byo_gui_gl/: Cargo.toml
examples/byo_gui_gl/src/: lib.rs
examples/byo_gui_softbuffer/: Cargo.toml
examples/byo_gui_softbuffer/src/: lib.rs
examples/byo_gui_wgpu/: Cargo.toml
examples/byo_gui_wgpu/src/: lib.rs
examples/gain/: Cargo.toml
examples/gain/src/: lib.rs
examples/gain_egui/: Cargo.toml
examples/gain_egui/src/: lib.rs
examples/gain_iced/: Cargo.toml
examples/gain_iced/src/: lib.rs
examples/iced_audio_widget/: Cargo.toml
examples/midi_inverter/: Cargo.toml
examples/poly_mod_synth/: Cargo.toml
examples/sine/: Cargo.toml
examples/stft/: Cargo.toml
examples/sysex/: Cargo.toml
