[package]
name = "nice-log"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "An opinionated yet flexible logger catering to the needs of the nice-plug plugin framework"
keywords = ["log", "logging", "nice-plug"]

[dependencies]
tracing-appender = "0.2.5"

[target.'cfg(target_os = "windows")'.dependencies.windows]
workspace = true
features = [
  "Win32_Foundation",
  "Win32_System_Diagnostics_Debug",
]

[dev-dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
