[package]
name = "byo_gui_softbuffer"
version = "0.1.0"
edition = "2024"
license = "ISC"
repository = "https://codeberg.org/RustAudio/nice-plug"
authors = ["Billy Messenger <60663878+BillyDM@users.noreply.github.com>"]
description = "A simple example plugin with a raw Softbuffer context for rendering"
publish = false

[lib]
# The `lib` artifact is needed for the standalone target
crate-type = ["cdylib", "lib"]

[dependencies]
nice-plug = { path = "../../crates/nice-plug", version = "0.2.0", features = [
    "assert_process_allocs",
    "standalone",
] }
baseview = { version = "0.2.0", features = ["opengl"] }
softbuffer = { version = "0.4.8", default-features = false, features = [
    "kms",
    "x11",
] }
crossbeam = "0.8"
atomic_float = "1.1"
# To make the state persistable
serde = { version = "1.0", features = ["derive"] }
