[package]
name = "gain"
version = "0.1.0"
edition = "2024"
license = "ISC"
repository = "https://codeberg.org/RustAudio/nice-plug"
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
nice-plug = { path = "../../crates/nice-plug", version = "0.2.0", features = [
    "assert_process_allocs",
] }
parking_lot = "0.12"
# tracing dependencies are only needed if you want to set up your own logging filters
tracing = "0.1"
tracing-subscriber = "0.3.23"
