[package]
name = "gain_egui"
version = "0.1.0"
authors = [
    "Billy Messenger <billydm@noreply.codeberg.org>",
    "Robbert van der Helm <mail@robbertvanderhelm.nl>",
]
description = "A simple gain plugin with an egui GUI"
edition = "2024"
license = "ISC"
repository = "https://codeberg.org/RustAudio/nice-plug"
publish = false

[lib]
# The `lib` artifact is needed for the standalone target
crate-type = ["cdylib", "lib"]

[dependencies]
egui = { version = "0.35.0", features = ["default_fonts"] }
nice-plug = { path = "../../crates/nice-plug", version = "0.2.0", features = [
    "assert_process_allocs",
    "standalone",
] }
nice-plug-egui = { path = "../../crates/nice-plug-egui", version = "0.3.0" }
baseview = { version = "0.2.0", features = ["opengl"] }
atomic_float = "1.1"
# Optional, only include if you want to pass messages between the
# GUI and the audio thread.
rtrb = "0.3.3"
# Optional, only include if you want to sync complex state between
# the GUI and the audio thread.
triple_buffer = "9.0.0"
