[package]
name = "gain_iced"
version = "0.1.0"
authors = [
    "Billy Messenger <billydm@noreply.codeberg.org>",
    "Robbert van der Helm <mail@robbertvanderhelm.nl>",
]
description = "A simple gain plugin with an egui GUI"
edition = "2024"
license = "ISC"
repository = "https://codeberg.org/RustAudio/nice-plug"
publish = false

[lib]
# The `lib` artifact is needed for the standalone target
crate-type = ["cdylib", "lib"]

[dependencies]
nice-plug = { path = "../../crates/nice-plug", version = "0.2.0", features = [
    "assert_process_allocs",
    "standalone",
] }
nice-plug-iced = { path = "../../crates/nice-plug-iced", version = "0.2.0" }
atomic_float = "1.1"
